Left align bundle items in cart. fixes SalzmanGroup/lavazza#23

--- a/app/assets/stylesheets/store/products.css.scss
+++ b/app/assets/stylesheets/store/products.css.scss
@@ -99,3 +99,5 @@ div.star-rating-on a {
   a { color: #000; }
   a:hover { text-decoration: underline }
 }
+
+ul.assembly_parts { text-align: left; }
